# open_ssl_demo

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  test_key.jks
app/src/main/: AndroidManifest.xml
app/src/main/java/com/security/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
encrypt-lib/: CMakeLists.txt  build.gradle
encrypt-lib/src/main/: AndroidManifest.xml
encrypt-lib/src/main/cpp/: AndroidNativeUtil.cpp  AndroidNativeUtil.h
encrypt-lib/src/main/cpp/helper/: EncryptHelper.cpp  EncryptHelper.h  JNIHelper.cpp  JNIHelper.h
encrypt-lib/src/main/java/com/security/openssl/: OpenSslUtil.java
encrypt-lib/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
